src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
	:root {
		--background: 0 0% 100%;
		--foreground: 216 50% 20%;

		--card: 0 0% 100%;
		--card-foreground: 216 50% 20%;

		--popover: 0 0% 100%;
		--popover-foreground: 216 50% 20%;

		--primary: 216 50% 20%;
		--primary-foreground: 210 40% 98%;

		--secondary: 210 40% 96.1%;
		--secondary-foreground: 216 50% 20%;

		--muted: 210 40% 96.1%;
		--muted-foreground: 216 50% 30%;

		--accent: 210 40% 96.1%;
		--accent-foreground: 216 50% 30%;

		--info: 217 91% 60%; /* bg-blue-500 */
		--info-dim: 213 94% 68%; /* bg-blue-400 */

		--success: 142 71% 45%; /* bg-green-500 */
		--success-dim: 142 69% 58%; /* bg-green-400 */

		--warning: 25 95% 53%; /* bg-orange-500 */
		--warning-dim: 27 96% 61%; /* bg-orange-400 */

		--destructive: 0 84.2% 60.2%;
		--destructive-foreground: 210 40% 98%;

		--border: 214.3 31.8% 91.4%;
		--input: 214.3 31.8% 91.4%;
		--ring: 215 20.2% 65.1%;

		--dice: 206 82% 65%;
		--tooltip: 208 78% 77%;

		--radius: 0.5rem;
	}

	:root[class~="dark"] {
		--background: 216 50% 11.8%;
		--foreground: 210 6% 80%;

		--card: 216 50% 11.8%;
		--card-foreground: 210 6% 80%;

		--popover: 216 50% 11.8%;
		--popover-foreground: 210 6% 80%;

		--primary: 210 6% 80%;
		--primary-foreground: 222.2 47.4% 11.2%;

		--secondary: 217.2 32.6% 17.5%;
		--secondary-foreground: 210 6% 80%;

		--muted: 217.2 32.6% 17.5%;
		--muted-foreground: 215 20.2% 65.1%;

		--accent: 217.2 32.6% 17.5%;
		--accent-foreground: 210 6% 80%;

		--info: 217 91% 60%; /* bg-blue-500 */
		--info-dim: 221 83% 53%; /* bg-blue-600 */

		--success: 142 71% 45%; /* bg-green-500 */
		--success-dim: 142 76% 36%; /* bg-green-600 */

		--warning: 25 95% 53%; /* bg-orange-500 */
		--warning-dim: 21 90% 48%; /* bg-orange-600 */

		--destructive: 0 62.8% 30.6%;
		--destructive-foreground: 0 85.7% 97.3%;

		--border: 217.2 32.6% 17.5%;
		--input: 217.2 32.6% 17.5%;
		--ring: 217.2 32.6% 17.5%;

		--dice: 211 90% 34%;
		--tooltip: 211 86% 27%;
	}
}

@layer base {
	* {
		@apply border-border;
	}
	body {
		@apply bg-background text-foreground;
		overscroll-behavior-y: none;
	}
}

a {
	@apply text-blue-600 dark:text-info;
}

